Feat: Enhance multi-threading capabilities by implementing dynamic emulator management and configuration